--- a/index.html
+++ b/index.html
@@ -48,19 +48,6 @@
       </div>
     </nav>
     <!-- welcome section -->
-    <div class="container" id="findCocktail">
-      <div class="d-flex align-items-center">
-        <div class="d-flex justify-content-end mt-5 mb-5 me-5">
-          <img class="w-50" src="img/mobile-bg.png" alt="" />
-        </div>
-        <div>
-          <h1>
-            Welcome to <br />
-            <span class="fw-bold font-size">Mobile gallery </span>
-          </h1>
-        </div>
-      </div>
-    </div>
     <div id="hideCarousel">
       <div class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -70,7 +57,7 @@
               <div>
                 <h1>
                   Welcome to <br />
-                  <span class="fw-bold font-size">Mobile gallery </span>
+                  <span class="fw-bold font-size">Mobile Paradise</span>
                 </h1>
               </div>
             </div>
@@ -171,7 +158,14 @@
       ></div>
       <div class="d-flex justify-content-center pt-4 pb-4"></div>
     </div>
-    <!-- show more -->
+    <!-- display mobile -->
+    <div class="container" id="hideLatestPhone">
+      <h3 class="text-center mt-2">Latest Phones</h3>
+      <div
+        class="row row-cols-1 row-cols-md-3 g-4 mb-3 mt-2"
+        id="addMobile"
+      ></div>
+    </div>
 
     <!-- bootstrap script -->
     <script
