--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             <a class="nav-link" href="#">features</a>
           </span>
           <span class="navbar-text">
-            <a class="nav-link" href="#">Pricing</a>
+            <img class="small-item" type="button" src="img/love.png" alt="" />
+          </span>
+          <span class="navbar-text ms-3">
+            <img class="small-item" type="button" src="img/cart.png" alt="" />
           </span>
         </div>
       </div>
