--- a/index.html
+++ b/index.html
@@ -41,17 +41,24 @@
           <span class="navbar-text">
             <a class="nav-link" href="#">features</a>
           </span>
-          <span class="navbar-text">
+          <span class="navbar-text all-position">
             <img class="small-item" type="button" src="img/love.png" alt="" />
+            <div id="love-circle">
+              <p>1</p>
+            </div>
           </span>
-          <span class="navbar-text ms-3">
+          <span class="navbar-text ms-3 all-position">
             <img class="small-item" type="button" src="img/cart.png" alt="" />
+            <div id="cart-circle">
+              <p>1</p>
+            </div>
+          </span>
           </span>
         </div>
       </div>
     </nav>
     <!-- welcome section -->
-    <div id="hideCarousel">
+    <!-- <div id="hideCarousel">
       <div class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -108,7 +115,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </div>
+    </div> -->
     <!-- border -->
     <div
       class="container list-group-item border-bottom-0 border-start-0 border-end-0 pb-4"
@@ -169,7 +176,6 @@
         id="addMobile"
       ></div>
     </div>
-
     <!-- <div class="modal-Align">
       <div id="modal-Id"></div>
     </div> -->
