--- a/index.html
+++ b/index.html
@@ -190,16 +190,30 @@
         <div>
           <P type="button" class="close">X</P>
         </div>
-        <div>
+        <div class="d-flex p-1">
           <img class="w-25" src="img/mobile-bg.jpg" alt="">
-          <h1>Name</h1>
-          <div>
-            <button>-</button>
-            <input type="number">
-            <button>+</button>
+          <div class="plus-minus ">
+            <button>
+              <i class="fas fa-minus">-</i>
+            </button>
+            <input
+                      id="phone-number"
+                      type="number"
+                      min="0"
+                      class="form-control text-center w-25"
+                      value="1"
+                    />
+            <button>
+              <i class="fas fa-plus">+</i>
+            </button>
+            <div class="d-flex align-items-center">
+              <h4 ><span>$</span> 1200</h4>
+              <h4></h4>
+              <img class="delete-Item" src="img/delete.png" alt="">
+            </div>
+          
           </div>
-          <h3>$ <span>1200</span> </h3>
-          <img src="" alt="">
+          
         </div>
       </div>
     </section>
