--- a/index.html
+++ b/index.html
@@ -186,13 +186,21 @@
     </div> -->
     <div id="modal-Id"></div>
 
-    <section class="container" id="showFullCart" >
-      <div class="addtocart"> 
+    <section class="container"  >
+      <div class="addtocart" id="showFullCart"> 
         <div>
-          <P type="button" class="close">X</P>
+          <P type="button" onclick="closeCart()" class="close">X</P>
         </div>
         <div id="showAddToCart">
 
+        </div>
+        <div class="d-flex justify-content-evenly mt-3">
+          <button type="button" class="btn btn-primary">Buy Now</button>
+          <div class="d-flex">
+            <h3 class="me-2">Total</h3>
+          <h3> $<span>1200</span> </h3>
+          </div>
+          
         </div>
       </div>
     </section>
