--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
           </span>
           <span class="navbar-text ms-3 all-position">
-            <img onclick="cartDetails()"  class="small-item" type="button" src="img/cart.png" alt="" />
+            <img id="myCartDetails" onclick="cartDetails()"  class="small-item" type="button" src="img/cart.png" alt="" />
             <div id="cart-circle">
               <p>1</p>
             </div>
